@@ -2,10 +2,11 @@
 Hash: SHA256
 
 DIST pycharm-professional-3.1.3.tar.gz 137299876 SHA256 e0c2db8f18cb825a95de6ddc4b0b9f93c5643bf34cca9f1b3c2fa37fd7c14f11 SHA512 629dec6c7c51a0d082839c9a78d3bf1c72dd58b6146d5ea51fff3d4ae21c7340b71d6c2150d1456ced8bd43e6da4c58540d0992903d4a44133e4d19fe348dc0b WHIRLPOOL b2ffe4f6c15e53cd4d06658d05b149764e2763276985e1d23ebbff3b608c30d4f3e10fd341fd25ba6eb8b1f1e979bbd981cb0542b922509da554dc21ce4f6b50
+DIST pycharm-professional-3.4.tar.gz 145641136 SHA256 27fb55e11b9952024978c1e47edb5d8817dafee603a0e22b58707d62828b27fc SHA512 d3a7c28240610d9b885ba59d1a963c044335ad4263fa70695f7b619c0aae00625cb5c5bf455219c1e5c9f3ccd0f8b044918e5bc9b24650046bbbc094d7a6d305 WHIRLPOOL ab08fde654d9b99cd8e289affec1f06db367732cd3d88a7369f4e9875a509dcb3f655e03e95f58ccccaacd9d00858d222954329b6d41f559ed49095c714da182
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlNo3MwACgkQknrdDGLu8JAp6AD/fN3fCZR7SmtVc9eMpYTrAaQ9
-CHTLcGE0ENO7AjTxa+EA/1Fm7UitdW8FeTeVORrn07qjIKZhe42ZwqGOoU/E30PF
-=KtjT
+iF4EAREIAAYFAlOIrNUACgkQknrdDGLu8JA/CQD/dikQmj1fms1PwmfobbRGGv/h
+GU/y+HqcvkoYyPVevoIA/RcbWInNQB0p2E4SCkmvTS4lrNMq625An/LSnSRfJGWP
+=/TzW
 -----END PGP SIGNATURE-----
