@@ -1,3 +1,8 @@
+*pycharm-professional-3.4 (30 May 2014)
+
+  30 May 2014; Michael Weber <xmw@gentoo.org> +pycharm-professional-3.4.ebuild:
+  Version bump
+
   18 May 2014; Michael Weber <xmw@gentoo.org> pycharm-professional-3.1.3.ebuild:
   update DESCRIPTION
 
